added imports to index.less, built and styled header-nav

--- a/index.html
+++ b/index.html
@@ -19,6 +19,30 @@
   
      
   <div class="container home">
+
+    <section>
+      <div class="header-nav">
+        <h1>Fun Bus</h1>
+        <nav>
+          <a href="">Home</a>
+          <a href="">About Us</a>
+          <a href="">Blog</a>
+          <a href="">Contact</a>
+        </nav>
+      </div>
+    </section>
+
+    <section>
+      <div class="main-header">
+        <div class="image-container">
+          <img src="img/fun-bus.jpg" alt="toy bus on the beach">
+        </div>
+        <h2>Welcome to the Fun Bus!</h2>
+        <p>Traveling expedition modern, clean webdesign blogger clean websign theme website modern. Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
+      </div>
+    </section>
+      
+
    
     <section class="content-section">
       <div class="text-content">
