added category tiles to catalog page

--- a/catalog.html
+++ b/catalog.html
@@ -34,6 +34,14 @@
 
     <section>
       <div class="content-container">
+        <div class="available">
+          <h1>NEW PUBLICATIONS</h1>
+          <div class="tile-container">
+            <div class="tile"><a href="" class="tile-link">MUSIC</a></div>
+            <div class="tile"><a href="poetry/chapbook/home.html" class="tile-link">POETRY</a></div>
+          </div>
+        </div>
+
         <h2>UPCOMING TITLES</h2>
         <section class="about">
           <p>Since launching in early December 2019, we have been working on a handful of exciting projects. While these titles are not yet available, we welcome pre-orders and special requests. You may contact us directly at <strong> ruckusmusicpublishing@gmail.com </strong> with any questions or to place an order. </p>
